@@ -5,8 +5,9 @@ René-Gilles Deberdt
 
 * Translations *
 BrainHell
-René-Gilles Deberdt
+Daniel J Karlsson <daniel.j.karlsson@gmail.com>
 Özgür
+René-Gilles Deberdt
 Sergei Sedov <sedov@webmail.perm.ru>
 shaitan <shaitan@passion-xbmc.org>
 Yagiz
